--- a/package.json
+++ b/package.json
@@ -9,15 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-tooltip": "^1.2.7",
+    "@vercel/og": "^0.8.5",
+    "apexcharts": "^5.3.2",
+    "framer-motion": "^12.23.12",
+    "lucide-react": "^0.534.0",
+    "mongoose": "^8.17.0",
+    "next": "15.4.5",
     "react": "19.1.0",
+    "react-apexcharts": "^1.7.0",
     "react-dom": "19.1.0",
-    "next": "15.4.4"
+    "recharts": "^3.1.0"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
     "eslint": "^9",
-    "eslint-config-next": "15.4.4",
-    "@eslint/eslintrc": "^3"
+    "eslint-config-next": "15.4.5",
+    "tailwindcss": "^4"
   }
 }
