--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "github",
+  "name": "gitview",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -12,21 +12,22 @@
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-tooltip": "^1.2.7",
     "@vercel/og": "^0.8.5",
-    "apexcharts": "^5.3.2",
-    "framer-motion": "^12.23.12",
-    "lucide-react": "^0.534.0",
+    "apexcharts": "^3.45.2",
+    "framer-motion": "^11.2.0",
+    "lucide-react": "^0.400.0",
     "mongoose": "^8.17.0",
     "next": "15.4.5",
-    "react": "19.1.0",
-    "react-apexcharts": "^1.7.0",
-    "react-dom": "19.1.0",
-    "recharts": "^3.1.0"
+    "react": "^18.3.1",
+    "react-apexcharts": "^1.4.0",
+    "react-dom": "^18.3.1",
+    "recharts": "^2.12.0"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
-    "eslint": "^9",
+    "@eslint/eslintrc": "^3.1.0",
+    "@tailwindcss/postcss": "^4.0.0",
+    "eslint": "^9.0.0",
     "eslint-config-next": "15.4.5",
-    "tailwindcss": "^4"
+    "postcss": "^8.4.47",
+    "tailwindcss": "^4.0.0"
   }
 }
