--- a/package.json
+++ b/package.json
@@ -3,31 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "@radix-ui/react-dialog": "^1.1.14",
-    "@radix-ui/react-tooltip": "^1.2.7",
-    "@vercel/og": "^0.8.5",
-    "apexcharts": "^3.45.2",
-    "framer-motion": "^11.2.0",
-    "lucide-react": "^0.400.0",
-    "mongoose": "^8.17.0",
+    "@vercel/og": "0.8.5",
+    "apexcharts": "3.45.2",
+    "framer-motion": "11.2.0",
+    "lucide-react": "0.400.0",
+    "mongoose": "8.17.0",
     "next": "15.4.5",
-    "react": "^18.3.1",
-    "react-apexcharts": "^1.4.0",
-    "react-dom": "^18.3.1",
-    "recharts": "^2.12.0"
+    "react": "18.3.1",
+    "react-apexcharts": "1.4.0",
+    "react-dom": "18.3.1"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3.1.0",
-    "@tailwindcss/postcss": "^4.0.0",
-    "eslint": "^9.0.0",
+    "autoprefixer": "10.4.20",
+    "eslint": "8.57.0",
     "eslint-config-next": "15.4.5",
-    "postcss": "^8.4.47",
-    "tailwindcss": "^4.0.0"
+    "postcss": "8.4.47",
+    "tailwindcss": "3.4.14"
   }
 }
