--- a/package.json
+++ b/package.json
@@ -10,21 +10,21 @@
   },
   "dependencies": {
     "@vercel/og": "^0.8.5",
-    "apexcharts": "^3.45.2",
-    "framer-motion": "^11.2.0",
-    "lucide-react": "^0.534.0",
+    "apexcharts": "^5.3.2",
+    "framer-motion": "^12.23.12",
+    "lucide-react": "^0.535.0",
     "mongoose": "^8.17.0",
-    "next": "^15.0.0",
-    "react": "^18.3.1",
-    "react-apexcharts": "^1.4.0",
-    "react-dom": "^18.3.1"
+    "next": "^15.4.5",
+    "react": "^19.1.1",
+    "react-apexcharts": "^1.7.0",
+    "react-dom": "^19.1.1"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.20",
-    "eslint": "^8.57.0",
-    "eslint-config-next": "^15.0.0",
-    "postcss": "^8.4.47",
-    "@tailwindcss/postcss": "^4.0.0-beta.5",
-    "tailwindcss": "^4.0.0-beta.5"
+    "autoprefixer": "^10.4.21",
+    "eslint": "^9.32.0",
+    "eslint-config-next": "^15.4.5",
+    "postcss": "^8.5.6",
+    "@tailwindcss/postcss": "^4",
+    "tailwindcss": "^4.1.11"
   }
 }
