--- a/package.json
+++ b/package.json
@@ -2,9 +2,6 @@
   "name": "gitview",
   "version": "0.1.0",
   "private": true,
-  "engines": {
-    "node": "18.x"
-  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -17,10 +14,10 @@
     "framer-motion": "12.23.12",
     "lucide-react": "0.535.0",
     "mongoose": "8.17.0",
-    "next": "15.4.5",
-    "react": "18.3.1",
+    "next": "15.3.4",
+    "react": "^19.0.0",
     "react-apexcharts": "1.7.0",
-    "react-dom": "18.3.1"
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "4.1.11",
